--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-native": "0.69.5",
+    "react-native-linear-gradient": "^2.6.2",
     "react-native-safe-area-context": "^4.3.3",
-    "react-native-screens": "^3.17.0"
+    "react-native-screens": "^3.17.0",
+    "expo-linear-gradient": "~11.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
